# byterider-helper-mods

./: .coverage  LICENSE  Makefile  README.md  __init__.py  logdoc_makefile_usage.md  pyproject.toml
.github/workflows/: test.yml
docs/pdf-generator/: generate_pdf.sh  pdf_config.yaml  pitch_deck_pitchDay_v2.md  sec_impl.md
src/logdoc/: __init__.py  cli.py  logger.py
src/logdoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/logdoc/core/: __init__.py  fix_headers.py  header_injector.py
src/logdoc/errors/: __init__.py  logdoc_exceptions.py
src/logdoc/logdoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/logdoc/utils/: __init__.py  filemeta.py  mask.py
tests/: test_logdoc_masking.py  test_smoke.py
